--- a/test-i18n-realtime.html
+++ b/test-i18n-realtime.html
@@ -130,6 +130,7 @@
             <div class="language-buttons">
                 <button class="language-btn active" data-lang="ja" id="btnJa">日本語</button>
                 <button class="language-btn" data-lang="en" id="btnEn">English</button>
+                <button class="language-btn" data-lang="zh-CN" id="btnZhCN">简体中文</button>
             </div>
         </div>
 
@@ -222,6 +223,7 @@
                 // 言語ボタンのラベル更新
                 document.getElementById('btnJa').textContent = '日本語';
                 document.getElementById('btnEn').textContent = 'English';
+                document.getElementById('btnZhCN').textContent = '简体中文';
                 
             } catch (error) {
                 addLog(`UI label update error: ${error.message}`, 'error');
