🇹🇼 feat: Add Chinese Traditional (zh-TW) translation files (Task 5.2)
📁 Created zh-TW directory with complete Traditional Chinese translations:
- common.json: Traditional Chinese UI elements (確定, 取消, 套用, etc.)
- menu.json: Menu system with Taiwan-specific terminology
- game.json: Game interface with Traditional Chinese gaming terms
- settings.json: Comprehensive accessibility settings in Traditional Chinese
- errors.json: Error messages with Taiwan-appropriate language
- achievements.json: Accessibility profiles and testing in Traditional Chinese
- help.json: Game help with Traditional Chinese terminology

🎨 Taiwan localization features:
- Traditional Chinese translations for 1,200+ keys
- Taiwan cultural adaptation and terminology preferences
- Font settings: Noto Sans TC, PingFang TC, Microsoft JhengHei
- Currency: NT$ (New Taiwan Dollar), Region: TW
- Language code: zh-TW with fallback to zh-CN, en, ja

🧪 Enhanced test interface:
- Added 繁體中文 button to test-i18n-realtime.html
- Real-time switching between Simplified and Traditional Chinese
- Language settings pre-configured in languages.json

✅ Task 5.2 completed: Chinese Traditional translation files ready

--- a/test-i18n-realtime.html
+++ b/test-i18n-realtime.html
@@ -131,6 +131,7 @@
                 <button class="language-btn active" data-lang="ja" id="btnJa">日本語</button>
                 <button class="language-btn" data-lang="en" id="btnEn">English</button>
                 <button class="language-btn" data-lang="zh-CN" id="btnZhCN">简体中文</button>
+                <button class="language-btn" data-lang="zh-TW" id="btnZhTW">繁體中文</button>
             </div>
         </div>
 
@@ -224,6 +225,7 @@
                 document.getElementById('btnJa').textContent = '日本語';
                 document.getElementById('btnEn').textContent = 'English';
                 document.getElementById('btnZhCN').textContent = '简体中文';
+                document.getElementById('btnZhTW').textContent = '繁體中文';
                 
             } catch (error) {
                 addLog(`UI label update error: ${error.message}`, 'error');
