--- a/test-i18n-realtime.html
+++ b/test-i18n-realtime.html
@@ -132,6 +132,7 @@
                 <button class="language-btn" data-lang="en" id="btnEn">English</button>
                 <button class="language-btn" data-lang="zh-CN" id="btnZhCN">简体中文</button>
                 <button class="language-btn" data-lang="zh-TW" id="btnZhTW">繁體中文</button>
+                <button class="language-btn" data-lang="ko" id="btnKo">한국어</button>
             </div>
         </div>
 
@@ -226,6 +227,7 @@
                 document.getElementById('btnEn').textContent = 'English';
                 document.getElementById('btnZhCN').textContent = '简体中文';
                 document.getElementById('btnZhTW').textContent = '繁體中文';
+                document.getElementById('btnKo').textContent = '한국어';
                 
             } catch (error) {
                 addLog(`UI label update error: ${error.message}`, 'error');
